extend mapping so a client can run from the db